<resources>
    <string name="app_name">Yahmeds</string>
    <string name="login_into_account">Login Into Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="pickup_location">Pickup location</string>
    <string name="search_pickup_location">Pickup location</string>
    <string name="search_drop_location">Pickup location</string>
    <string name="drop_location">Drop location</string>
    <string name="your_email_address">Enter Your Email Address</string>
    <string name="next">Next</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_map_key">AIzaSyAV8fpiGX9TEoCJFcM804xuFe1auV4-x-4</string>
    <string name="google_map_key1">AIzaSyCvmcxX78X6ytSRoUwG597ktnYoeuG4oBs</string>
    <string name="facebook_hash_key">HygJaYEqvAgt4Dyx5zzb/imKhII=</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">968176010874385</string>
    <string-array name="select_user_type">
        <item>User</item>
        <item>Ambulance Driver</item>
    </string-array>
    <!-- <string name="AIzaSyAV8fpiGX9TEoCJFcM804xuFe1auV4-x-4">Google map key</string>-->
</resources>